<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.home.passgen.MainActivity">


    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tvPassword_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/tvPassword_marginTop" />

    <CheckBox
        android:id="@+id/cbNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cbSimbols"
        android:layout_alignBottom="@+id/cbSimbols"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/cbNumbers_marginEnd"
        android:text="@string/cbNumbers_text" />

    <CheckBox
        android:id="@+id/cbSimbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbSimbols_text"
        android:layout_below="@+id/tvPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/cbSimbols_marginTop" />

    <CheckBox
        android:id="@+id/cbLetters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbLetters_text"
        android:layout_alignBaseline="@+id/cbSimbols"
        android:layout_alignBottom="@+id/cbSimbols"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edNumbers"
        android:layout_width="@dimen/edNumbers_layout_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbSimbols"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/edNumbers_layout_marginTop"
        android:text="@string/edNumbers_text"
        android:inputType="number"
        android:gravity="center" />

    <Button
        android:id="@+id/btnGener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnGener_text"
        android:layout_marginBottom="@dimen/btnGener_layout_marginBottom"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/cbLetters" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tvText_text"
        android:layout_alignBaseline="@+id/edNumbers"
        android:layout_alignBottom="@+id/edNumbers"
        android:layout_alignStart="@+id/btnBuffer" />

    <Button
        android:id="@+id/btnBuffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBuffer_text"
        android:layout_alignBaseline="@+id/btnGener"
        android:layout_alignBottom="@+id/btnGener"
        android:layout_toEndOf="@+id/tvPassword"
        android:layout_marginStart="@dimen/btnBuffer_layout_marginStart" />

</RelativeLayout>
